# luleo

./: .gitignore  CNAME  README.md  README.md~  abstract.md  daily_vibe.xml
website/: .dockerignore  Dockerfile  README.md  main.py  pasted_text.txt  poetry.toml  pyproject.toml
website/.cache/Microsoft/DeveloperTools/: deviceid
website/.cache/replit/env/: latest  latest.json
website/.cache/replit/nix/: env.json
website/.upm/: store.json
website/src/: agi.py  db_init.py  love.py  luleo.py  qualia.py  questions.py  wisdom.py
website/src/routes/: agi.py  all_inputs.py  analysis.py  app_page.py  art.py  contribute.py  divine.py  harmony.py  ideas.py  love.py  moloch.py  questions.py  wisdom.py
website/src/utils/: helpers.py
website/static/css/: ideas.css  main.css  main.css.map  style.css
website/static/html/: agi_page.html  all_inputs.html  analysis_page.html  app_page.html  art_page.html  contribute_page.html  divine_page.html  home_page.html  ideas_page.html  index.html  latest_inputs_page.html  love_page.html  macros.html  questions_page.html  test_inputs_page.html  wisdom_page.html
website/static/js/: contribute_form.js  date.js  ideas.js  image.js  main.js  script.js  sidebar.js  typewriter.js  upload.js
website/static/sass/: main.css.map  main.scss
website/static/sass/components/: _box.scss  _dict_container.scss  _file_upload.scss  _form.scss  _image-container.scss  _image-description.scss  _mini-posts.scss  _spotify-embed.scss  _typewriter.scss
website/static/sass/layout/: _header.scss  _menu.scss  (+1 more)
website/templates/: ideas.html  index.html
(+3209 files in other folders)
